# sidekick-jam-entry-danger-doofus

./: .idanarye.omnipytent.3.py  Cargo.toml  README.md  build.rs  index.html
.github/workflows/: release.yaml
asset-sources/: block-tile.pxo  crystal.pxo  doofus.pxo  door.pxo  floor-block.pxo  gate.pxo  ina.pxo
assets/levels/: Final Door.yol  Final_Door.yol  Gatekeeping.yol  Gentleman.yol  Great_Service.yol  Introduction_1.yol  Introduction_2.yol  Introduction_3.yol  Opening_Gates.yol  Pushing_Up.yol  Running_Around.yol  Wrong_Step.yol  index.yoli  level-01.yol
credits/: CREDITS.md
src/: animation_helpers.rs  arena.rs  camera.rs  crystal.rs  doofus.rs  door.rs  floating_text.rs  gate.rs  global_types.rs  ina.rs  input.rs  level_progress.rs  lib.rs  loading.rs  main.rs  menu.rs  player_control.rs  utils.rs  yoleck_utils.rs
