[package]
name = "danger_doofus"
version = "0.1.0"
publish = false
authors = ["Idan Arye <idanarye@gmail.com>"]
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
default = [
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/x11",
    "bevy/bevy_gilrs",
    "bevy_kira_audio/ogg",
]

dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = { version = "0.7", default-features = false }
bevy_kira_audio = { version = "0.9" }
bevy_asset_loader = { version = "0.10" }
rand = "0.8.3"
bevy-yoleck = { git = "https://github.com/idanarye/bevy-yoleck.git", features = ["tools_2d"] }
serde = "1.0.137"
bevy_rapier2d = "0.13.2"
itertools = "0.10.3"
float-ord = "0.3.2"
ezinput = "0.2.4"
ezinput_macros = "0.2.0"
bevy-egui-kbgp = "0.6.0"
bevy_egui = "0.14.0"
clap = { version = "3.1.17", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.25", features=["x11"]}

[build-dependencies]
embed-resource = "1.4"
